--- a/SCI/src/NonLinear/CMakeLists.txt
+++ b/SCI/src/NonLinear/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(SCI-NonLinear INTERFACE)
 target_link_libraries(SCI-NonLinear
-	INTERFACE SCI-Millionaire
+	INTERFACE SCI-Millionaire gemini SEAL::seal
 )
